// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/pipenv/extract extractPackageFile() extracts dependencies 1`] = `
Object {
  "constraints": Object {
    "python": "== 3.6.*",
  },
  "deps": Array [
    Object {
      "currentValue": "==0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==1.0.0",
      "depName": "_invalid-package",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "invalid-name",
    },
    Object {
      "currentValue": "==0 0",
      "depName": "invalid-version",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "invalid-version",
    },
    Object {
      "currentValue": "==1.0.0",
      "datasource": "pypi",
      "depName": "pytest-benchmark",
      "depType": "packages",
      "managerData": Object {
        "nestedVersion": true,
      },
    },
    Object {
      "currentValue": "==0.1.0",
      "datasource": "pypi",
      "depName": "dev-package",
      "depType": "dev-packages",
      "managerData": Object {},
    },
  ],
  "lockFiles": Array [
    "Pipfile.lock",
  ],
  "registryUrls": Array [
    "https://pypi.org/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`manager/pipenv/extract extractPackageFile() extracts example pipfile 1`] = `
Object {
  "constraints": Object {
    "python": "== 2.7.*",
  },
  "deps": Array [
    Object {
      "depName": "requests",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "any-version",
    },
    Object {
      "currentValue": ">0.5.0",
      "datasource": "pypi",
      "depName": "records",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "depName": "django",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "git-dependency",
    },
    Object {
      "depName": "e682b37",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "file-dependency",
    },
    Object {
      "depName": "e1839a8",
      "depType": "packages",
      "managerData": Object {},
      "skipReason": "local-dependency",
    },
    Object {
      "currentValue": "*",
      "depName": "pywinusb",
      "depType": "packages",
      "managerData": Object {
        "nestedVersion": true,
      },
      "registryUrls": Array [
        "https://pypi.python.org/simple",
      ],
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "depName": "nose",
      "depType": "dev-packages",
      "managerData": Object {},
      "skipReason": "any-version",
    },
    Object {
      "currentValue": ">=1.0,<3.0",
      "datasource": "pypi",
      "depName": "unittest2",
      "depType": "dev-packages",
      "managerData": Object {
        "nestedVersion": true,
      },
    },
  ],
  "lockFiles": Array [
    "Pipfile.lock",
  ],
  "registryUrls": Array [
    "https://pypi.python.org/simple",
  ],
}
`;

exports[`manager/pipenv/extract extractPackageFile() extracts multiple dependencies 1`] = `
Object {
  "constraints": Object {
    "python": "== 3.6.*",
  },
  "deps": Array [
    Object {
      "currentValue": "==1",
      "datasource": "pypi",
      "depName": "Django",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==0.6.27",
      "datasource": "pypi",
      "depName": "distribute",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==0.2",
      "datasource": "pypi",
      "depName": "dj-database-url",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==2.4.5",
      "datasource": "pypi",
      "depName": "psycopg2",
      "depType": "packages",
      "managerData": Object {},
    },
    Object {
      "currentValue": "==0.1.2",
      "datasource": "pypi",
      "depName": "wsgiref",
      "depType": "packages",
      "managerData": Object {},
    },
  ],
  "lockFiles": Array [
    "Pipfile.lock",
  ],
  "registryUrls": Array [
    "https://pypi.org/simple",
  ],
}
`;

exports[`manager/pipenv/extract extractPackageFile() supports custom index 1`] = `
Object {
  "constraints": Object {},
  "deps": Array [
    Object {
      "currentValue": "==0.21.0",
      "datasource": "pypi",
      "depName": "requests",
      "depType": "packages",
      "managerData": Object {
        "nestedVersion": true,
      },
      "registryUrls": Array [
        "https://testpypi.python.org/pypi",
      ],
    },
  ],
  "lockFiles": Array [
    "Pipfile.lock",
  ],
  "registryUrls": Array [
    "https://pypi.python.org/simple",
    "https://testpypi.python.org/pypi",
  ],
}
`;
